--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -79,6 +79,90 @@
     }
   }
 
+  &__popover {
+
+    &-title {
+      font-weight: 800;
+      font-size: 17px;
+      padding: 16px 16px 8px 16px;
+      font-family: "GoogleSans-Regular", sans-serif;
+
+
+    }
+
+    &-content {
+      .popover__department-title {
+        line-height: 40px;
+        opacity: .65;
+        font-family: "GoogleSans-Regular", sans-serif;
+        font-size: 16px;
+        color: #666;
+        padding-left: 20px;
+        padding-right: 12px;
+        display: block;
+      }
+
+      .ms-nav__popover-project {
+
+    font-family: "GoogleSans-Regular", sans-serif;
+        line-height: 40px;
+        padding: 0 12px;
+
+        .popover__project {
+          margin-left: 8px;
+
+          &-icon {
+            border-radius: 50%;
+            min-width: 32px;
+            min-height: 32px;
+            background-color: rgb(33, 150, 243);
+            margin-right: 16px;
+            width: 32px;
+            height: 32px;
+            position: relative;
+
+          }
+
+          .person-icon {
+
+            width: 16px;
+            height: 16px;
+            -webkit-mask: url('/assets/img/smallIcon.svg') no-repeat -15.5px -49px;
+            mask: url('/assets/img/smallIcon.svg') no-repeat -15.5px -49px;
+            background-color: #ffffff;
+            cursor: pointer;
+          }
+
+          &-selected {
+            position: absolute;
+            right: 16px;
+
+            &.icon-tick {
+              width: 16px;
+              height: 16px;
+              -webkit-mask: url('/assets/img/ICON.svg') no-repeat -584px -104px;
+              mask: url('/assets/img/ICON.svg') no-repeat -584px -104px;
+              background-color: #ffffff;
+              cursor: pointer;
+            }
+          }
+
+
+        }
+      }
+
+      .ms-nav__popover-project:hover {
+        background-color: #e1eeff;
+        cursor: pointer;
+      }
+
+      .ms-nav__popover-project:hover>.icon-tick {
+        background-color: #e1eeff;
+      }
+    }
+  }
+
+
   &__home {
     border-right: 1px solid #e0e0e0;
   }
