--- a/src/app/main/project/project-grid/project-grid.component.html
+++ b/src/app/main/project/project-grid/project-grid.component.html
@@ -2,22 +2,29 @@
   <!-- Phần header của Grid -->
   <div class="grid-task__header d-flex align-center content-between">
     <div class="grid-task__filter-group d-flex align-center">
+
+      <!-- Filter tất cả công việc -->
       <div class="grid-task__quick-filter d-flex align-center cursor-pointer" (click)="funcNotAvailable()">
         <div class="icon-grid-filter"></div>
         <div class="m-l-8 m-r-8">{{gridConst.WidgetFilter}}</div>
         <div class="icon-carret-down "></div>
       </div>
+
+      <!-- Filter trạng thái hoàn thành-->
       <div class="grid-task__status-filter d-flex align-center cursor-pointer"  (click)="funcNotAvailable()">
         <div class="icon-grid-status-done "></div>
         <div class="m-l-8 m-r-8">{{gridConst.WidgetStatus}}<b class="m-l-4">{{gridConst.WidgetAll}}</b>
         </div>
         <div class="icon-carret-down "></div>
       </div>
+
+      <!-- Filter sắp xếp -->
       <div class="grid-task__sort-order d-flex align-center cursor-pointer"  (click)="funcNotAvailable()">
         <div class="icon-grid-sort"></div>
         <div class="m-l-8 m-r-8">{{gridConst.WidgetSort}} <b>{{gridConst.WidgetChild}}</b></div>
         <div class="icon-carret-down "></div>
       </div>
+      <!-- Function chọn nhiều -->
       <div class="grid-task__choose-many d-flex align-center cursor-pointer"  (click)="funcNotAvailable()">
         <div class="icon-grid-choose-many "></div>
         <div class="m-l-8 m-r-8">{{gridConst.WidgetSelector}}</div>
@@ -27,15 +34,19 @@
 
   <!-- Phần Content của Grid -->
   <div class="grid-task__content">
+
+    <!-- Phần bản chính -->
     <dx-data-grid [dataSource]="gridData" keyExpr="TaskId" height=100% [allowColumnResizing]="true"
       [hoverStateEnabled]="true">
       <dxi-column caption="" width="48" minWidth="48" cellTemplate="cellTemplate" headerCellTemplate="headerTemplate"
         alignment="center"></dxi-column>
 
+        <!-- Phần Header của Grid -->
       <div *dxTemplate="let data of 'headerTemplate'">
         <div class="grid-task__icon add-col cursor-pointer"  (click)="funcNotAvailable()"></div>
       </div>
 
+      <!-- Các cột trong bảng -->
       <dxi-column *ngFor="let column of taskColumns" alignment="left" [caption]="column['ColName']"
         [dataField]="column['ColField']" [width]="column['ColWidth']" [dataType]="column['ColDataType']"
         [format]="column['ColFormat']" [cellTemplate]="column['CellTemplate']">
@@ -76,6 +87,7 @@
   </div>
 </div>
 
+<!-- ToastMessage -->
 <dx-toast [(visible)]="toastVisible" [type]="type" [closeOnOutsideClick]=true [closeOnSwipe]=true [closeOnClick]=true
   width=auto [displayTime]=2000>
   <dxo-position my="bottom right" at="bottom right" of="window" offset="-20 -20">
