--- a/src/app/main/project/project-report/project-report.component.html
+++ b/src/app/main/project/project-report/project-report.component.html
@@ -1,16 +1,26 @@
 <div class="ms-report__main-content">
+  <!-- Phần Header của Report -->
   <div class="ms-report__header">
     <div class="ms-report__title">{{ reportConst['ReportTitle'] }}</div>
   </div>
 
+  <!-- Phần bảng dữ liệu -->
   <dx-chart class="ms-report__chart" [dataSource]="reportData" [rotated]="true"
     [palette]="['rgb(81, 213, 97)', 'rgb(141, 163, 166)']">
-    <dxi-series valueField="FinishDate" [name]="reportConst['LegendFinishedLabel']"></dxi-series>
-    <dxi-series valueField="UnFinishDate" [name]="reportConst['LegendUnfinishedLabel']"></dxi-series>
+    <dxi-series valueField="Finished" [name]="reportConst['LegendFinishedLabel']">
+      <dxo-label [visible]="true" backgroundColor="rgb(81, 213, 97)" alignment="center" [customizeText]="customizeText">
+      </dxo-label>
+    </dxi-series>
+    <dxi-series valueField="UnFinished" [name]="reportConst['LegendUnfinishedLabel']">
+      <dxo-label [visible]="true" backgroundColor="rgb(141, 163, 166)" alignment="center" [customizeText]="customizeText">
+      </dxo-label>
+    </dxi-series>
 
     <dxi-value-axis position="right" [tickInterval]="1" color="rgba(118, 118, 118, 0.2)"
       [constantLineStyle]="{color: '#FF0000'}">
-      <dxo-title [text]="reportConst['ValueAxisLabel']"></dxo-title>
+      <dxo-title [text]="reportConst['ValueAxisLabel']">
+
+      </dxo-title>
     </dxi-value-axis>
 
     <dxo-argument-axis [inverted]="true" color="rgba(118, 118, 118, 0.2)" [constantLineStyle]="{color: '#FF0000'}">
